--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@ h1 {
 	font-weight:bold;
 	padding:50px 0;
 }
-
-#parameters, #topArticles {
-	border: 1px solid #20315a;
-	margin:0 0 30px 0;
+h1 span {
+	font-size:20px;
+	font-weight:normal;
 }
 
-#articles {
-	padding:20px;
+#currentEmployees, #addEmployee {
+	border: 1px solid #20315a;
+	margin:0 0 30px 0;
 }
 
 h2 {
@@ -39,16 +39,61 @@ h2 {
 	padding:10px;
 }
 
+h3 {
+	margin:15px 0 5px 0;
+}
+
 form {
 	padding:20px;
 }
 
-h3 {
-	font-size:18px;
-	font-weight:bold;
-	margin:;
+table {
+	margin:20px;
+	width:100%;
+	max-width:1230px;
 }
 
-input, select {
+h3, th {
+	font-size:18px;
+	font-weight:bold;
+	text-align:left;
+}
+
+th, td {
+	height:30px;
+    vertical-align: middle;
+}
+
+th {
+	border-bottom:1px solid #20315a;
+}
+
+#name-input, #role-input, #startDate-input, #rate-input {
 	width:100%;
+	max-width:1190px;
+	padding:10px;
+	margin:10px 0;
+}
+
+#add-employee {
+  background: #2b4a94;
+  background-image: -webkit-linear-gradient(top, #2b4a94, #20315a);
+  background-image: -moz-linear-gradient(top, #2b4a94, #20315a);
+  background-image: -ms-linear-gradient(top, #2b4a94, #20315a);
+  background-image: -o-linear-gradient(top, #2b4a94, #20315a);
+  background-image: linear-gradient(to bottom, #2b4a94, #20315a);
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  text-shadow: 1px 1px 3px #666666;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin: 20px 0 0 0;
+}
+
+#add-employee:hover {
+  background: #2b4a94;
+  text-decoration: none;
 }
